force-app/main/default/objects/Weather__c/Weather__c.object-meta.xml
<CustomObject>
    <label>Weather</label>
    <nameField>
        <label>Weather</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weather</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>