force-app/main/default/objects/Weather__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seattle</fullName>
            </value>
            <value>
                <fullName>Portland</fullName>
            </value>
            <value>
                <fullName>San Francisco</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>