force-app/main/default/objects/Weather__c/fields/Temperature_C__c.field-meta.xml
<CustomField>
    <fullName>Temperature_C__c</fullName>
    <label>Temperature (C)</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>